--- a/src/main/resources/static/test1.html
+++ b/src/main/resources/static/test1.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>基础条形图</title>
+    <title>基础饼图</title>
 
     <script src="./js/highcharts.js"></script>
     <script src="./js/exporting.js"></script>
